fix: Table of Content overflow (https://github.com/jackyzha0/quartz/issues/1437)

--- a/quartz/components/styles/toc.scss
+++ b/quartz/components/styles/toc.scss
@@ -1,8 +1,5 @@
-.toc {
-  overflow-y: auto;
-  &.desktop-only {
-    max-height: 40%;
-  }
+.toc.desktop-only {
+  max-height: 40%;
 }
 
 button#toc {
